<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth"
    android:onClick="ocultarTeclado">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom"
        android:isScrollContainer="false"
        android:windowSoftInputMode="adjustResize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tin_user_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blanco_static"
                    android:theme="@style/TinLabel"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="12dp"
                        android:ems="10"
                        android:hint="@string/et_email"
                        android:inputType="textWebEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/blanco_static"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tin_pass_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blanco_static"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blanco_static"
                    android:theme="@style/TinLabel"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/et_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:textColor="@color/blanco_static"
                        android:drawableStart="@drawable/ic_pass"
                        android:ems="10"
                        android:hint="@string/et_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <Button
                    android:id="@+id/bt_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    android:text="@string/fragment_signin"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco_static"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>